# poc_permissions

./: .env  Cargo.toml  Dockerfile  docker-compose.yml  permissions
src/: main.rs  routes.rs
src/controllers/: mod.rs
src/db/: mod.rs
src/middleware/: mod.rs  tests.rs
src/serializers/: menus.rs  mod.rs  modules.rs  settings.rs  tests.rs  timelines.rs
