[package]
name = "permissions"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenv = "0.15.0"
futures = "0.3.30"
mongodb = "3.0.1"
redis = "0.26.1"
serde_json = "1.0.125"
tokio = { version = "1.39.3", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
